# groupselect-lib

./: pyproject.toml
groupselect/: field_mode.py
groupselect/algorithms/: __init__.py  algorithm_dream.py  algorithm_heuristic.py
